log
Thu 28 Sep 2023 01:56:40 AM UTC: 
 tests:  0|4
total_score: 0/70
44ef8a7
Thu 28 Sep 2023 06:45:09 AM UTC: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
ff8b74f
Thu 28 Sep 2023 06:47:16 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:20: error: subscripted value is neither array nor pointer nor vector
   23 |     return pq->size[0].data;
      |                    ^
heap.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6adf899
